feat: configure logo in dashboard & login page
